--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client-install": "cd client && npm install",
-    "client-build": "cd client && npm run build",
-    "client-postbuild": "npm run client-install && npm run client-build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tarannum",
   "license": "ISC",
@@ -22,6 +19,7 @@
     "https": "^1.0.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
+    "path": "^0.12.7",
     "uuid": "^9.0.1"
   }
 }
